--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,42 @@
 body {
     font-family: "Roboto",sans-serif;
     display: flex;
+    background-color: #cecece;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow: hidden;
+    
+}
+
+canvas {
+    border: 2px solid steelblue;
+}
+
+.toolbox{
+    background-color: steelblue;
+    border: 1px solid slateblue;
+    display: flex;
+    width: 804px;
+    padding: 1rem;
+}
+
+.toolbox > *{
+    background-color: white;
+    border: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    width: 50px !important;
+    height: 50px;
+    margin: 0.25rem;
+    padding: 0.25rem;
+    cursor: pointer;
+}
+
+
+
+.toolbox :last-child{
+    margin-left: auto;
 }
